--- a/LagerHantering/index.html
+++ b/LagerHantering/index.html
@@ -24,6 +24,8 @@
     <script src="AngularApp/Services/loginService.js"></script>
     <script src="AngularApp/Services/registerService.js"></script>
     <script src="AngularApp/Services/componentService.js"></script>
+    <script src="AngularApp/Controllers/articleControllerjs.js"></script>
+    <script src="AngularApp/Services/articleService.js"></script>
 
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
 </head>
@@ -45,6 +47,7 @@
                     <ul class="nav navbar-nav navbar-right">
                         <li data-ng-hide="!authentication.isAuth"><a href="#/component">Komponenter</a></li>
                         <li data-ng-hide="!authentication.isAuth"><a href="/#/register">Skapa användare</a></li>
+                        <li data-ng-hide="!authentication.isAuth"><a href="/#/article">Artiklar</a></li>
                         <li data-ng-hide="!authentication.isAuth"><a href="" data-ng-click="logOut()">Logga ut</a></li>
                     </ul>
                 </div>
