--- a/LagerHantering/index.html
+++ b/LagerHantering/index.html
@@ -25,6 +25,7 @@
     <script src="AngularApp/Services/registerService.js"></script>
     <script src="AngularApp/Services/componentService.js"></script>
     <script src="AngularApp/Controllers/deliveryInController.js"></script>
+    <script src="AngularApp/Controllers/editComponentController.js"></script>
 
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
 </head>
