--- a/LagerHantering/index.html
+++ b/LagerHantering/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
     <title>Lagerhantering</title>
-	<meta charset="utf-8" />
+    <meta charset="utf-8" />
     <!-- angularjs library och css -->
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.0/jquery.min.js"></script>
     <script src=Scripts/angular.min.js></script>
@@ -11,6 +11,7 @@
     <script src="Scripts/angular-local-storage.min.js"></script>
     <link href="Content/bootstrap-theme.min.css" rel="stylesheet" />
     <link href="Content/bootstrap.min.css" rel="stylesheet" />
+    <link href="Content/style.css" rel="stylesheet" />
 
 
     <!-- controllers, services -->
@@ -32,32 +33,32 @@
 </head>
 
 <body ng-app="App">
-        <nav class="navbar navbar-inverse" data-ng-controller="indexController">
-            <div class="container-fluid">
-                <div class="navbar-header">
-                    <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-2">
-                        <span class="sr-only">Toggle navigation</span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                        <span class="icon-bar"></span>
-                    </button>
-                    <div class="check-element animate-show-hide" data-ng-hide="!authentication.isAuth">
-                    </div>
-                </div>
-                <div class="nav-collapse" data-toggle="collapse" data-target=".nav-collapse.in" id="bs-example-navbar-collapse-2">
-                    <ul class="nav navbar-nav navbar-right">
-                        <li data-ng-hide="!authentication.isAuth"><a href="#/component">Komponenter</a></li>
-                        <li data-ng-hide="!authentication.isAuth"><a href="/#/register">Skapa användare</a></li>
-                        <li data-ng-hide="!authentication.isAuth"><a href="/#/article">Artiklar</a></li>
-                        <li data-ng-hide="!authentication.isAuth"><a href="" data-ng-click="logOut()">Logga ut</a></li>
-                    </ul>
+    <nav class="navbar navbar-inverse" data-ng-controller="indexController">
+        <div class="container-fluid">
+            <div class="navbar-header">
+                <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-2">
+                    <span class="sr-only">Toggle navigation</span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                    <span class="icon-bar"></span>
+                </button>
+                <div class="check-element animate-show-hide" data-ng-hide="!authentication.isAuth">
                 </div>
             </div>
-        </nav>
-        <div class="container">
-            <div data-ng-view="">
+            <div class="nav-collapse" data-toggle="collapse" data-target=".nav-collapse.in" id="bs-example-navbar-collapse-2">
+                <ul class="nav navbar-nav navbar-right">
+                    <li data-ng-hide="!authentication.isAuth"><a href="#/component">Komponenter</a></li>
+                    <li data-ng-hide="!authentication.isAuth"><a href="/#/register">Skapa användare</a></li>
+                    <li data-ng-hide="!authentication.isAuth"><a href="/#/article">Artiklar</a></li>
+                    <li data-ng-hide="!authentication.isAuth"><a href="" data-ng-click="logOut()">Logga ut</a></li>
+                </ul>
             </div>
         </div>
+    </nav>
+    <div class="container">
+        <div data-ng-view="">
+        </div>
+    </div>
 
-    </body>
+</body>
 </html>
