--- a/LagerHantering/index.html
+++ b/LagerHantering/index.html
@@ -30,6 +30,7 @@
     <script src="AngularApp/Controllers/articleOutBoundControllerjs.js"></script>
     <script src="AngularApp/Controllers/statisticController.js"></script>
     <script src="AngularApp/Services/statisticService.js"></script>
+    <script src="AngularApp/Controllers/editArticleController.js"></script>
 
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
 </head>
@@ -50,7 +51,7 @@
                 <div class="nav-collapse" data-toggle="collapse" data-target=".nav-collapse.in" id="bs-example-navbar-collapse-2">
                     <ul class="nav navbar-nav navbar-right">
                         <li data-ng-hide="!authentication.isAuth"><a href="#/component">Komponenter</a></li>                       
-                        <li data-ng-hide="!authentication.isAuth"><a href="/#/article">Skapa artiklar</a></li>
+                        <li data-ng-hide="!authentication.isAuth"><a href="/#/article">Artiklar</a></li>
                         <li data-ng-hide="!authentication.isAuth"><a href="/#/articleoutbound">Utleverans</a></li>
                         <li data-ng-hide="!authentication.isAuth"><a href="/#/statistik">Statistik</a></li>
                         <li data-ng-hide="!authentication.isAuth"><a href="/#/register">Skapa användare</a></li>
