Basic Frontend + Bootstrap.UI (module, modal of sorts)

--- a/LagerHantering/index.html
+++ b/LagerHantering/index.html
@@ -9,9 +9,14 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <script src="Scripts/angular-route.min.js"></script>
     <script src="Scripts/angular-local-storage.min.js"></script>
+    <!--Angular JS Modulelänkar-->
+    <script src="scripts/angular-ui/ui-bootstrap-tpls.min.js"></script>
+    <link href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css" rel="stylesheet">
+    <!--Angular JS Modulelänkar-->
     <link href="Content/bootstrap-theme.min.css" rel="stylesheet" />
     <link href="Content/bootstrap.min.css" rel="stylesheet" />
     <link href="Content/style.css" rel="stylesheet" />
+
 
 
 
