--- a/LagerHantering/index.html
+++ b/LagerHantering/index.html
@@ -74,15 +74,18 @@
     </div>
     <div class="container">
         <div data-ng-view="">
-            
+
             <script>
-                $( document ).ready(function() {
+                $(document).ready(function () {
                     //toastr.info('Are you the 6 fingered man?')
                 });
 
             </script>
         </div>
     </div>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/js/toastr.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/js/toastr.min.js"></script>
+    <div>
+        <a href="http://i.imgur.com/HFA5ZMK.png"></a>
+    </div>
 </body>
 </html>
