--- a/LagerHantering/index.html
+++ b/LagerHantering/index.html
@@ -15,6 +15,7 @@
     <!--Angular JS Modulelänkar-->
     <link href="Content/bootstrap-theme.min.css" rel="stylesheet" />
     <link href="Content/bootstrap.min.css" rel="stylesheet" />
+    <script src="scripts/bootstrap.js"></script>
     <link href="Content/style.css" rel="stylesheet" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/css/toastr.min.css">
 
@@ -74,13 +75,7 @@
     </div>
     <div class="container">
         <div data-ng-view="">
-            
-            <script>
-                $( document ).ready(function() {
-                    //toastr.info('Are you the 6 fingered man?')
-                });
-
-            </script>
+           
         </div>
     </div>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/latest/js/toastr.min.js"></script>
