--- a/LagerHantering/index.html
+++ b/LagerHantering/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <script src="Scripts/angular-route.min.js"></script>
     <script src="Scripts/angular-local-storage.min.js"></script>
+    <script src="scripts/bootstrap.js"></script>
     <!--Angular JS Modulelänkar-->
     <script src="scripts/angular-ui/ui-bootstrap-tpls.min.js"></script>
     <link href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css" rel="stylesheet">
@@ -77,7 +78,7 @@
 
             <script>
                 $(document).ready(function () {
-                    //toastr.info('Are you the 6 fingered man?')
+
                 });
 
             </script>
